Sorted layout and alignmemnt issues with card deck

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,11 +126,14 @@ img {
 .letter {
     margin-left: 20px;
 }
-#output {
+#cards {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
+}
+.card-deck .card {
+    margin-bottom: 20px;
 }
 .card {
     width: 18rem;
@@ -141,7 +144,13 @@ img {
     webkit-box-shadow: 5px 5px 5px 5px rgba(0,41,38,1);
     -moz-box-shadow: 5px 5px 5px 5px rgba(0,41,38,1);
     box-shadow: 5px 5px 5px 5px rgba(0,41,38,1);
+    height: 100vh;
 }
+.card-img-top {
+    height: 13vw;
+    object-fit: cover;
+}
+
 ul, ol {
     list-style-type: none;
 }
@@ -154,12 +163,7 @@ li {
     font-weight: bold;
     color: #ffd826;
 }
-.accom {
-    margin: 10px 0px 10px 0px;
-}
-.accom-info {
-    padding-left: 50px;
-}
+
 .ext-link {
     text-decoration: none;
     color: #ffffff;
